force-app/main/default/objects/Job_Aplication__c/Job_Aplication__c.object-meta.xml
<CustomObject>
    <description>Postulaciones</description>
    <label>Job Aplication</label>
    <nameField>
        <label>Job Aplication Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jobs Aplications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>