force-app/main/default/objects/Job_Aplication__c/validationRules/AbiertoCerrado.validationRule-meta.xml
<ValidationRule>
    <fullName>AbiertoCerrado</fullName>
    <active>true</active>
    <errorConditionFormula>IF( TEXT(  Position__r.Estado__c )= &quot;Cerrado&quot;,true,false)</errorConditionFormula>
    <errorMessage>La vacante esta cerrada</errorMessage>
</ValidationRule>